Adding base styles

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
   <![endif]-->
-  <link rel="stylesheet" media="all" href="dist/assets/styles.min.css" />
+  <link rel="stylesheet" media="all" href="dist/assets/horizontal-styles.min.css" />
   <script src="dist/assets/script.min.js"></script>
 </head>
 
